Major update: - Join mailing list created - SQL to docker - Search improved - Email retrieves image - Algo for best sellers - New websockets integrated - Coupon logic is created - Major refactoring around the app